@@ -30,6 +30,9 @@ cupt (2.3.0~) UNRELEASED; urgency=low
       - New option 'cupt::console::actions-preview::show-not-preferred'.
     - system/worker:
       - Logging: log errors too.
+      - Downloading package archives: include only those codename/component
+        pairs to long descriptions which belong to a selected base
+        download URI.
     - cache:
       - Honor 'cupt::cache::limit-releases::*' options.
   * doc:
